--- a/.hintrc
+++ b/.hintrc
@@ -3,9 +3,6 @@
     "development"
   ],
   "hints": {
-    "no-inline-styles": "off",
-    "compat-api/html": "off",
-    "axe/text-alternatives": "off",
-    "axe/name-role-value": "off"
+    "no-inline-styles": "off"
   }
 }
